Fixed Desktop Styling Issues, adjusted gap between cards

--- a/scss/_blog-cards.scss
+++ b/scss/_blog-cards.scss
@@ -3,22 +3,27 @@
 
 
 .blog-cards {
+    margin-top: 2.5rem;
+    
 
     .blog {
+
         position: relative;
         display: flex;
         flex-direction: column;
-        margin: .5rem;
+        margin: .4rem;
+        margin-bottom: .75rem;
         background-color: $text-color-light;
+
         img {
             width: 100%;
             max-height: 250px;
             object-fit: cover;
             padding: .5rem;
-            margin-top: 1.5rem;  
-            
+            margin-top: 1.25rem;
+
         }
-        
+
         h2 {
             text-transform: uppercase;
             font-weight: 500;
@@ -26,13 +31,15 @@
             width: 100%;
             color: $brand-color;
             padding: .5rem;
-            margin: 0;       
+            margin: 0;
         }
+
         p {
             padding: .5rem;
-            margin: 0;  
+            margin: 0;
             font-weight: 600;
         }
+
         .read-more-link {
             display: block;
             align-self: flex-end;
@@ -46,6 +53,7 @@
             font-weight: 700;
             text-decoration: none;
             text-transform: uppercase;
+
             &:hover {
                 color: $brand-color;
                 background-color: $text-color-light;
@@ -65,6 +73,7 @@
     .blog-cards {
         .blog {
             padding: 1rem;
+
             h2 {
                 font-size: 3rem;
             }
@@ -75,7 +84,7 @@
 @media (min-width: $tablet-large) {
     .blog-cards {
         .blog {
-            padding: 1rem; 
+            padding: 1rem;
         }
     }
 }
