--- a/scss/_sidebar.scss
+++ b/scss/_sidebar.scss
@@ -4,7 +4,10 @@
         margin: .5rem;
         @media (min-width: $desktop) {
             width: 15rem;
+            
         }
+
+
     h2 {
         background-color: $brand-color;
         color: $text-color-light;
@@ -32,6 +35,7 @@
     #breakfast, #steak {
         background-color: #E7E7E7;
     }
+   
     .section-cuisines {
         margin-top: .5rem;
     }
@@ -40,10 +44,10 @@
         background-color: $text-color-light;
         width: 100%;
     }
-    
+ 
     ul {
         display: grid;
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: .6fr 1fr;
         margin: 0;
         padding: .5rem;
         max-width: 20rem;
@@ -52,7 +56,13 @@
             max-width: 34rem;
         }
         @media (min-width: $desktop) {
+            //Keep Sidebar to the right, and eliminate gap left under top images
             display: inline-block;
+            position: absolute;
+            background-color: $text-color-light;
+             width: 15rem;
+
+      
         }
     }
     li {
