--- a/scss/_top-images.scss
+++ b/scss/_top-images.scss
@@ -11,12 +11,14 @@
         }
         }
     .top-card {
+      
         position: relative;
-        margin: .5rem;
+        margin: .25rem;
         img {
             width: 100%;
             max-height: 250px;
-            object-fit: cover;
+            object-fit:cover;
+           
             
         }
         
@@ -35,5 +37,9 @@
     }
     @media(min-width: $desktop) {
         max-height: 300px;
+        
+        
     }
+
+
 }
